--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div class="nav-items">
     
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Skills</a></li>
                 <li><a href="#">Portfolio</a></li>
