--- a/about.html
+++ b/about.html
@@ -103,7 +103,7 @@
         <br>
 
         <h4 class="about-text">
-            В основном этапе мы прошли 3 полных курса. И все участники заняли призовые места.
+            В основном этапе мы прошли 3 полных курса. И все участники заняли призовые места на областном этапе.
             <br>
             за исключением задачи проверочного этапа, мы участвовали в 140 контестах, и в каждом из них было 5-10 заданий.
         </h4>
