--- a/online-okulyk/index.html
+++ b/online-okulyk/index.html
@@ -16,7 +16,7 @@
         <div class="items">
 
             <ul class="nav">
-                <li><a href="index.html">Информатика</a></li>
+                <li><a href="index.html" id="selected">Информатика</a></li>
                 <li><a href="dev-tools.html">Программалау тілдері</a></li>
                 <li><a href="sign up.html">Тіркелу</a></li>
                 <li><a href="tests.html">Тесттер</a></li>
@@ -38,11 +38,11 @@
 
                 <div class="social">
 
-                    <a href="http://instagram.com/sholpan_kuzenova/"><i class="bi bi-instagram"></i></a>
-                    <a href="http://t.me/sholpan_kuzenova"><i class="bi bi-telegram"></i></a>
-                    <a href="#"><i class="bi bi-facebook"></i></a>
-                    <a href="#"><i class="bi bi-youtube"></i></a>
-                    <a href="#"><i class="bi bi-whatsapp"></i></a>
+                    <a href="http://instagram.com/sholpan_kuzenova/"></a>
+                    <a href="http://t.me/sholpan_kuzenova"></a>
+                    <a href="#"></a>
+                    <a href="#"></a>
+                    <a href="#"></a>
 
                 </div>
 
@@ -95,6 +95,8 @@
                     <div id="txt4" class="info"></div>
                     
                 </div>
+
+                <br><br><br><br>
         
             </div>
 
