--- a/online-okulyk/contact.html
+++ b/online-okulyk/contact.html
@@ -20,7 +20,7 @@
                 <li><a href="dev-tools.html">Программалау тілдері</a></li>
                 <li><a href="sign up.html">Тіркелу</a></li>
                 <li><a href="tests.html">Тесттер</a></li>
-                <li><a href="contact.html">Байланыс</a></li>
+                <li><a href="contact.html" id="selected">Байланыс</a></li>
             </ul>
 
         </div>
@@ -34,6 +34,19 @@
             <a href="#" id="email"><i class="fi fi-br-envelope"></i><span>Email</span></a>
 
             <a href="#" id="phone"><i class="fi fi-sr-phone-call"></i><span>Phone</span></a>
+
+        </div>
+
+        <div class="info">
+
+            <h3>Кузенова Шолпан Полатовна</h3>
+            <a href="http://sholpan.kuzenova@mail.ru" target="_blank" rel="noopener noreferrer">sholpan.kuzenova@mail.ru</a>
+
+            <br>
+            <br>
+
+            <h3>Aлламбергенова Құндыз Кадамбаевна</h3>
+            <a href="http://Kundiz.allambergen@gmail.com" target="_blank" rel="noopener noreferrer">kundiz.allambergen@gmail.com</a>
 
         </div>
 
