--- a/math-quiz/index.html
+++ b/math-quiz/index.html
@@ -23,7 +23,13 @@
     </div>
 
     <div class="start" id="startbg">
+
+        <h4>Math Quiz</h4>
+
         <button id="start" onclick="started()">Start</button>
+
+        <h4 id="author">by AdilkhanAlimberdi</h4>
+
     </div>
 
     <div class="container" id="content">
