--- a/shyraq/index.html
+++ b/shyraq/index.html
@@ -10,7 +10,7 @@
 
     <div class="wrapper">
 
-        <div class="brand">
+        <div id="brand">
             <div class="logo"></div>
             <div class="name">SHYRAQ</div>
         </div>
@@ -19,6 +19,16 @@
             <div id="home">HOME</div>
             <div id="download">DOWNLOAD</div>
             <div id="contacts">CONTACTS</div>
+        </div>
+
+        <div id="top">
+
+            <div id="phone-nav"></div>
+            
+            <div id="phone-home">HOME</div>
+            <div id="phone-download">DOWNLOAD</div>
+            <div id="phone-contacts">CONTACTS</div>
+
         </div>
 
     </div>
