--- a/shyraq/contacts.html
+++ b/shyraq/contacts.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="shortcut icon" href="images/fire.png" type="image/x-icon">
+    <title>Contacts</title>
 </head>
 <body>
 
@@ -32,30 +33,40 @@
         </div>
 
     </div>
+
+    <div id="translate">
+        <div id="kz">KZ</div>
+        <div id="ru">RU</div>
+        <div id="en">EN</div>
+    </div>
+
+    <div class="line"></div>
     
     <div class="contacts-container">
 
         <p class="contacts-title">Contact Us</p>
 
+        <div class="space30"></div>
+
         <div class="form">
 
             <form action="POST">
 
-                <label for="name">Name: </label>
+                <label for="name" id="name-label">Name: </label>
                 <input type="text" id="name" name="name" required>
 
                 <div class="space20"></div>
 
-                <label for="email">Email: </label>
+                <label for="email" id="email-label">Email: </label>
                 <input type="email" id="email" name="email" required>
 
                 <div class="space20"></div>
 
-                <label for="contact-text">Message: </label>
+                <label for="contact-text" id="message-label">Message: </label>
                 <textarea name="contact-text" id="contact-text" required></textarea>
 
                 <div class="space20"></div>
-                <button id="submit">submit</button>
+                <button id="submit">send</button>
 
             </form>
 
@@ -65,11 +76,11 @@
         <p class="text">For questions and suggestions, write to us</p>
 
         <div class="space10"></div>
-        <p>Email: <a href="mailto:adilkhankerimshe@gmail.com">adilkhankerimshe@gmail.com</a></p>
-        <p>Phone number: +7 771 671 29 05</p>
+        <p id="text-email">Email: adilkhankerimshe@gmail.com</p>        
+        <p id="text-number">Phone number: +7 771 671 29 05</p>
 
         <div class="space30"></div>
-        <p class="text">Social media</p>
+        <p class="text" id="text-social-media">Social media</p>
         <div class="space10"></div>
         <a href="https://instagram.com/adilkhanalimberdi">Instagram</a>
         <br>    
@@ -80,6 +91,7 @@
 
     <div class="bottom-space"></div>
 
+    <script src="page3.js"></script>
     <script src="script.js"></script>
     <script src="form-action.js"></script>
 
