--- a/shyraq/download.html
+++ b/shyraq/download.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="images/fire.png" type="image/x-icon">
     <title>Download</title>
 </head>
 <body>
@@ -32,6 +33,14 @@
         </div>
 
     </div>
+
+    <div id="translate">
+        <div id="kz">KZ</div>
+        <div id="ru">RU</div>
+        <div id="en">EN</div>
+    </div>
+    
+    <div class="line"></div>
     
     <div class="download-container">
 
@@ -44,6 +53,7 @@
 
     </div>
 
+    <script src="page2.js"></script>
     <script src="script.js"></script>
 
 </body>
