--- a/shyraq/index.html
+++ b/shyraq/index.html
@@ -54,8 +54,11 @@
             <p class="use-for-translate">Our application was created specifically for students who encounter difficulties in studying the history of Kazakhstan.</p>
         </div>
 
-        <div class="space30"></div>
-        <div class="photo"></div>
+        <div class="space60"></div>
+        <div class="images">
+            <div class="photo"></div>
+            <div class="photo2"></div>
+        </div>
 
     </div>
 
