--- a/shyraq/index.html
+++ b/shyraq/index.html
@@ -56,7 +56,7 @@
 
         <div class="space60"></div>
         <div class="images">
-            <div class="photo"></div>
+            <div class="photo1"></div>
             <div class="photo2"></div>
         </div>
 
